--- a/Lab0-Setup.ipynb
+++ b/Lab0-Setup.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "codecommit_client = boto3.client('codecommit')\n",
     "\n",
-    "repo_name = \"my-project\"\n",
+    "repo_name = \"dev-project\"\n",
     "repo_desc = \"Automated model (re)training and endpoint upadates via AWS Lambda and Step Functions\"\n",
     "\n",
     "\n",
@@ -47,15 +47,15 @@
     "%cd /home/ec2-user/SageMaker/\n",
     "!git clone https://git-codecommit.us-east-1.amazonaws.com/v1/repos/{repo_name} /home/ec2-user/SageMaker/{repo_name}\n",
     "    \n",
-    "!cp -r /home/ec2-user/SageMaker/serverless-mlops-with-aws-sagemaker-lambda-and-stepfunctions/* /home/ec2-user/SageMaker/{repo_name}/\n",
+    "!cp -r /home/ec2-user/SageMaker/MLOps-SageMaker-Lambda-StepFunction/* /home/ec2-user/SageMaker/{repo_name}/\n",
     "\n",
     "%cd /home/ec2-user/SageMaker/{repo_name}/\n",
     "!git add .\n",
-    "!git commit -m \"...\"\n",
+    "!git commit -m \"add your comment here...\"\n",
     "\n",
     "!git push\n",
     "\n",
-    "%cd /home/ec2-user/SageMaker/serverless-mlops-with-aws-sagemaker-lambda-and-stepfunctions"
+    "%cd /home/ec2-user/SageMaker/MLOps-SageMaker-Lambda-StepFunction/"
    ]
   },
   {
@@ -103,8 +103,8 @@
     "\n",
     "# Create S3 Buckets for this project (pass if they exist)\n",
     "account_id = boto3.client('sts').get_caller_identity().get('Account')\n",
-    "source_bucket = \"my-datalake-{account_id}\".format(account_id=account_id)\n",
-    "project_bucket = \"my-project-{account_id}\".format(account_id=account_id)\n",
+    "source_bucket = \"dev-datalake-{account_id}\".format(account_id=account_id)\n",
+    "project_bucket = \"dev-project-{account_id}\".format(account_id=account_id)\n",
     "\n",
     "create_bucket(bucket_name=source_bucket, region=None)\n",
     "create_bucket(bucket_name=project_bucket, region=None)\n",
@@ -180,7 +180,7 @@
    "metadata": {},
    "source": [
     "### Step 4: Create IAM Policies and Roles\n",
-    "We'll finally create an IAM role for our workflow. The IAM roles grant the services permissions within your AWS environment."
+    "We'll finally create an IAM role for our workflow. The IAM roles grant the services permissions within your AWS environment. For this demo, we will use the same role that we are using in this notebook."
    ]
   },
   {
@@ -192,20 +192,19 @@
     "# Create IAM Policies and Roles for this project (pass if they exist)\n",
     "iam = boto3.client('iam')\n",
     "\n",
-    "# Get Policy ARN in order to attach it to role later\n",
-    "aws_managed_basic_lambda_policy_ARN = \"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\"\n",
-    "aws_managed_lambda_policy_ARN = \"arn:aws:iam::aws:policy/service-role/AWSLambdaRole\"\n",
-    "aws_managed_step_functions_policy_ARN = \"arn:aws:iam::aws:policy/AWSStepFunctionsFullAccess\"\n",
-    "aws_managed_sagemaker_policy_ARN = \"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\"\n",
-    "aws_managed_s3_policy_ARN = \"arn:aws:iam::aws:policy/AmazonS3FullAccess\"\n",
-    "aws_managed_codecommit_policy_ARN = \"arn:aws:iam::aws:policy/AWSCodeCommitFullAccess\"\n",
-    "\n",
-    "\n",
     "# Set Role/Policy names\n",
-    "step_function_role_name = \"My-StepFunction-Workflow-Role\"\n",
-    "step_function_role_description = \"Role to allow a step function systematic access to invoke Lambda functions, run data processing jobs in Glue, run SageMaker training jobs and update endpoints\"\n",
+    "workflow_role_name = \"My-Workflow-Role\"\n",
+    "workflow_role_description = \"Role to allow a step function systematic access to invoke Lambda functions, run data processing jobs in Glue, run SageMaker training jobs and update endpoints\"\n",
     "\n",
-    "step_function_trust_policy = {\n",
+    "# Get Admin Policy ARN in order to give our workflow role the permission\n",
+    "# it needs to run the entire workflow on its own\n",
+    "aws_managed_admin_policy_ARN = \"arn:aws:iam::aws:policy/AdministratorAccess\"\n",
+    "# Note: This is not a recommended practice in dev/prod evirements. Please work with\n",
+    "# your admin on an IAM setup that is addresses your security requirements. \n",
+    "\n",
+    "\n",
+    "# This trust policy allows other services to use this role (lambda/step-functions)\n",
+    "trust_policy = {\n",
     "  \"Version\": \"2012-10-17\",\n",
     "  \"Statement\": [\n",
     "    {\n",
@@ -237,80 +236,39 @@
     "# Create Step Function Role (pass if it already exists)\n",
     "try:\n",
     "    step_function_role = iam.create_role(\n",
-    "        RoleName=step_function_role_name,\n",
-    "        Description=step_function_role_description,\n",
-    "        AssumeRolePolicyDocument=json.dumps(step_function_trust_policy),\n",
+    "        RoleName=workflow_role_name,\n",
+    "        Description=workflow_role_description,\n",
+    "        AssumeRolePolicyDocument=json.dumps(trust_policy),\n",
     "        MaxSessionDuration=3600\n",
     "    )\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    print(\"Unable to create {}\".format(step_function_role_name))\n",
+    "    print(\"Unable to create {}\".format(workflow_role_name))\n",
     "\n",
     "    \n",
-    "# Attach the SageMaker Full Access Policy\n",
+    "# Attach the Admin Full Access Policy\n",
     "try:\n",
     "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_sagemaker_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
+    "        PolicyArn=aws_managed_admin_policy_ARN,\n",
+    "        RoleName=workflow_role_name\n",
     "    )\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_sagemaker_policy_ARN, step_function_role_name))\n",
+    "    print(\"Unable to attach {} to {}\".format(aws_managed_admin_policy_ARN, workflow_role_name))\n",
     "\n",
-    "# Attach Step Function Full Access Policy to Role (pass if it already exists)\n",
-    "try:\n",
-    "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_step_functions_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_step_functions_policy_ARN, step_function_role_name))\n",
-    "\n",
-    "\n",
-    "# Attach the Lambda policies\n",
-    "try:\n",
-    "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_lambda_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_lambda_policy_ARN, step_function_role_name))\n",
-    "try:\n",
-    "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_basic_lambda_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_basic_lambda_policy_ARN, step_function_role_name))\n",
-    "\n",
-    "# S3\n",
-    "try:\n",
-    "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_s3_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_s3_policy_ARN, step_function_role_name))\n",
-    "\n",
-    "# CodeCommit\n",
-    "try:\n",
-    "    iam.attach_role_policy(\n",
-    "        PolicyArn=aws_managed_codecommit_policy_ARN,\n",
-    "        RoleName=step_function_role_name\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    print(\"Unable to attach {} to {}\".format(aws_managed_codecommit_policy_ARN, step_function_role_name))\n",
     "\n",
     "# Get Role ARN in order to print\n",
-    "step_function_role_ARN = \"arn:aws:iam::{account}:role/{name}\".format(account=account_id, name=step_function_role_name)\n",
-    "print(\"Step Function Role ARN: {arn}\".format(arn = step_function_role_ARN))\n",
+    "workflow_role_ARN = \"arn:aws:iam::{account}:role/{name}\".format(account=account_id, name=workflow_role_name)\n",
+    "print(\"Step Function Role ARN: {arn}\".format(arn = workflow_role_ARN))\n",
     "\n",
-    "admin_setup[\"workflow_execution_role\"] = step_function_role_ARN"
+    "admin_setup[\"workflow_execution_role\"] = workflow_role_ARN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write the setup ARNs to disk"
    ]
   },
   {
@@ -324,6 +282,13 @@
     "    \n",
     "admin_setup"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
